# Grimoire

./: .env.example  .gitignore  pyproject.toml  railway.toml  requirements.txt
backend/: Dockerfile  main.py
backend/agents/: __init__.py  architecture_mapper.py  code_chunker.py  qa_interface.py  repo_ingestor.py  tech_debt_analyzer.py
backend/api/: routes.py
backend/core/: embeddings.py  rag.py
backend/graph/: orchestrator.py  state.py
backend/tests/unit/: test_architecture_mapper.py  test_code_chunker.py  test_embeddings.py  test_orchestrator.py  test_qa_interface.py  test_rag.py  test_repo_ingestor.py  test_state.py  test_tech_debt_analyzer.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: ArchitectureReport.tsx  ChatInterface.tsx  CytoscapeGraph.tsx  DependencyTree.tsx  HeroSection.tsx  MermaidDiagram.tsx  ProgressView.tsx  TechDebtReport.tsx
frontend/src/hooks/: useAnalysis.ts
frontend/src/lib/: api.ts
